--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 	<meta name="viewport" content="width=1184">
 	<title>Document</title>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,400italic,300,300italic,700,700italic&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/less" href="style.less">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="js/jquery.js"></script>
-    <script src="js/less.js"></script>
     <script src="js/dash.js"></script>
     <script src="js/paper.js"></script>
 
